force-app/main/default/objects/LINE_Webhook_Event__e/LINE_Webhook_Event__e.object-meta.xml
<CustomObject>
    <description
  >One LINE webhook event, published by the webhook after the signature check and processed by LineWebhookEventTrigger as Automated Process.</description>
    <label>LINE Webhook Event</label>
    <pluralLabel>LINE Webhook Events</pluralLabel>
</CustomObject>