force-app/main/default/objects/LINE_Webhook_Event__e/fields/Event_Json__c.field-meta.xml
<CustomField>
    <fullName>Event_Json__c</fullName>
    <description>The single LINE event object as JSON.</description>
    <label>Event JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>