force-app/main/default/objects/LINE_Webhook_Event__e/fields/OA_Configuration_Id__c.field-meta.xml
<CustomField>
    <fullName>OA_Configuration_Id__c</fullName>
    <description
  >ID of the LINE_OA_Configuration__c that received the event.</description>
    <label>OA Configuration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>