force-app/main/default/objects/LINE_Webhook_Event__e/fields/Webhook_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Event_Id__c</fullName>
    <description>LINE webhookEventId (idempotency key).</description>
    <label>Webhook Event ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>